screen.css: small bugfix for IE7 + simple whitespace cleaning

--- a/wymeditor/skins/default/screen.css
+++ b/wymeditor/skins/default/screen.css
@@ -5,15 +5,15 @@
  * and GPL (GPL-license.txt) licenses.
  *
  * For further information visit:
- * 		http://www.wymeditor.org/
+ *      http://www.wymeditor.org/
  *
  * File Name:
- *		screen.css
- *		main stylesheet for the default WYMeditor skin
- *		See the documentation for more info.
+ *      screen.css
+ *      main stylesheet for the default WYMeditor skin
+ *      See the documentation for more info.
  *
  * File Authors:
- * 		Daniel Reszka (d.reszka@wymeditor.org)
+ *      Daniel Reszka (d.reszka@wymeditor.org)
 */
 
 /*TRYING TO RESET STYLES THAT MAY INTERFERE WITH WYMEDITOR*/
@@ -55,8 +55,8 @@
         .wym_area_left          { width: 150px; float: left;}
         .wym_area_right         { width: 150px; float: right;}
         .wym_area_bottom        { clear: both;}
- * html .wym_area_main          { height: 1%;}
-
+ * html .wym_area_main,
+ *+html .wym_area_top           { height: 1%;}
 
 /*SECTIONS SYSTEM*/
 
